# cpppm

./: .gitignore  README.md  requirements.txt  setup.py
.github/workflows/: build-examples.yml
cmake_test_package/: conanfile.py  main.cpp
cpppm/: __init__.py  cli.py  conans.py  config.py  events.py  executable.py  layout.py  library.py  project.py  target.py
cpppm/cache/: __init__.py  attr.py  object.py  root.py
cpppm/detect/: __init__.py  compiles.py
cpppm/templates/: CMakeLists.target.j2  CMakeLists.txt.j2  conanfile.py  conanfile.py.j2  conanfile.txt.j2  conanfilev2.py.j2  event.py.j2  generator.py.j2
cpppm/toolchains/: __init__.py  msvc.py  toolchain.py
cpppm/utils/: __init__.py  decorators.py  events.py  inspect.py  listproperty.py  loader.py  pathlist.py  runner.py  sha.py  types.py
doc/: toochains.md
examples/: conanfile.py  project.py
examples/basic_project/: project.py
examples/basic_project/include/: basic.hpp
examples/basic_project/src/: basic.cpp  main.cpp  private.hpp
examples/build_events/: project.py
examples/cmake_test_package/: CMakeLists.txt  conanfile.py  main.cpp
examples/conan_requires/: conanbuildinfo.txt  project.py
examples/ext_example/: git.py
examples/header_only/: project.py
examples/hello_cpppm/: project.py
examples/hello_xproject/: project.py
examples/pybind/: binding.cpp  project.py
examples/subdirectories/: project.py
test_package/: project.py
unittests/: layout.py  project.py
unittests/cache/: cache.py
unittests/test_utils/: __init__.py
unittests/utils/: pathlist.py
(+10 files in other folders)
